2009-11-10  Kai Tietz  <kai.tietz@onevision.com>

	* strings.h: Move into ../crt folder.
	* string.h: Likewise.
	* dlfcn.h: Likewise.

2009-11-10  NightStrike

	Move C runtime headers into ../crt folder.

2009-11-07  Ivan Maidanski   <ivmai@users.sourceforge.net>

	* sys/utime.h (_futime): New prototype.
	(_wutime): New prototype.

2009-10-24  Roland Schwingel  <roland.schwingel@onevision.com>

	* winternal.h: Improved structure definitions.

2009-10-16 Jonathan Yong  <jon_y@users.sourceforge.net>

	* stdio.h (fdopen): Mark as deprecated for msvc 2005.
	(fileno): Ditto.
	(unlink): Ditto.
	(vsnprintf): Ditto.
	(tempnam): Ditto.
	(fcloseall): Ditto.
	(fdopen): Ditto.
	(fgetchar): Ditto.
	(fileno): Ditto.
	(flushall): Ditto.
	(fputchar): Ditto.
	(getw): Ditto.
	(putw): Ditto.
	(rmtmp): Ditto.
	* wchar.h (wcsdup): Mark as deprecated for msvc 2005.
	(wcsnset): Ditto.
	(wcsrev): Ditto.
	(wcsset): Ditto.
	(wcslwr): Ditto.
	(wcsupr): Ditto.
	(wcsicoll): Ditto.
	* process.h (cwait): Mark as deprecated for msvc 2005.
	(execl): Ditto.
	(execle): Ditto.
	(execlp): Ditto.
	(execlpe): Ditto.
	(spawnl): Ditto.
	(spawnle): Ditto.
	(spawnlp): Ditto.
	(spawnlpe): Ditto.
	(execv): Ditto.
	(execve): Ditto.
	(execvp): Ditto.
	(execvpe): Ditto.
	(spawnv): Ditto.
	(spawnve): Ditto.
	(spawnvp): Ditto.
	(spawnvpe): Ditto.
	* memory.h (memccpy): Mark as deprecated for msvc 2005.
	(memicmp): Ditto.
	* stdlib.h (ecvt): Mark as deprecated for msvc 2005.
	(fcvt): Ditto.
	(gcvt): Ditto.
	(itoa): Ditto.
	(ltoa): Ditto.
	* search.h (lfind): Mark as deprecated for msvc 2005.
	(lsearch): Ditto.
	* math.h (j0): Mark as deprecated for msvc 2005.
	(j1): Ditto.
	(jn): Ditto.
	(y0): Ditto.
	(y1): Ditto.
	(yn): Ditto.
	(hypot): Ditto.
	* conio.h (cgets): Mark as deprecated for msvc 2005.
	(cprintf): Ditto.
	(cputs): Ditto.
	(cscanf): Ditto.
	(getch): Ditto.
	(getche): Ditto.
	(kbhit): Ditto.
	(putch): Ditto.
	(ungetch): Ditto.
	(inp): Ditto.
	(inpw): Ditto.
	(outp): Ditto.
	(outpw): Ditto.